Bug 156837 - SVG: baseline-shift not used if css style is used
Summary: SVG: baseline-shift not used if css style is used
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: SVG-Import
  Show dependency treegraph
 
Reported: 2023-08-21 11:54 UTC by Xisco Faulí
Modified: 2023-11-07 12:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
sample (272 bytes, image/svg+xml)
2023-08-21 11:54 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-08-21 11:54:37 UTC
Created attachment 189068 [details]
sample

Steps to reproduce:
1. Open attached document
Comment 1 Commit Notification 2023-08-21 13:49:40 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/56a360328790eb009efed6fce94a795f6fe0a7d2

tdf#156837: check baseline-shift from parent too

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-08-21 17:59:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/8961c5abbd981d40fad6bb658688bd6582cbaab6

tdf#156837: check baseline-shift from parent too

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.