svgio/inc/svgstyleattributes.hxx
@@ -436,7 +436,7 @@ namespace svgio::svgreader
 
             // BaselineShift
             void setBaselineShift(const BaselineShift aBaselineShift) { maBaselineShift = aBaselineShift; }
-            BaselineShift getBaselineShift() const { return maBaselineShift; }
+            BaselineShift getBaselineShift() const;
             SvgNumber getBaselineShiftNumber() const;
         };
 
